--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -63,7 +63,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-group"></i> <span class="nav-label">Asegurados</span> <span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-user"></i> <span class="nav-label">Asegurados</span> <span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li>
                                 <a href="#">Agregar Asegurado<span class="fa arrow"></span></a>
@@ -99,6 +99,20 @@
                                 </ul>
                             </li>
                             <li><a href="/sistema/policies">Consultar Pólizas</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-group"></i> <span class="nav-label">Colectivo</span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level collapse">
+                            <li>
+                                <a href="#">Agregar Colectivo<span class="fa arrow"></span></a>
+                                <ul class="nav nav-third-level">
+                                    <li><a href="/sistema/add-health-collective">Salud</a></li>
+                                    <li><a href="/sistema/add-vehicle-collective">Vehículo</a></li>
+                                    <li><a href="/sistema/add-risk-diverse-collective">Riesgos Diversos</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="/sistema/collectives">Consultar Colectivos</a></li>
                         </ul>
                     </li>
                     <!--li>
