--- a/src/views/collectives.ejs
+++ b/src/views/collectives.ejs
@@ -2,16 +2,16 @@
 <%- include('layouts/header') %>
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>Pólizas</h2>
+        <h2>Colectivos</h2>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
                 <a href="/sistema">Home</a>
             </li>
             <li class="breadcrumb-item">
-                <a>Pólizas</a>
+                <a>Colectivos</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Consulta de Pólizas</strong>
+                <strong>Consulta de Colectivos</strong>
             </li>
         </ol>
     </div>
@@ -21,18 +21,18 @@
         <div class="col-lg-12">
             <div class="ibox ">
                 <div class="ibox-title">
-                    <h5>Pólizas</h5>
+                    <h5>Colectivos</h5>
                 </div>
                 <div class="ibox-content">
                     <div class="table-responsive">
                         <table 
                             class="table table-striped table-bordered table-hover"
-                            id="tablaPolizas" 
+                            id="tablaColectivos" 
                         >
                         <thead>
                         <tr>
-                            <th>Pólizas</th>
-                            <th>Tipo Individual</th>
+                            <th>Póliza</th>
+                            <th>Tipo Colectivo</th>
                             <th>Tomador</th>
                             <th>Aseguradora</th>
                             <th>Fecha desde</th>
@@ -49,8 +49,8 @@
                         </tbody>
                         <tfoot>
                         <tr>
-                            <th>Pólizas</th>
-                            <th>Tipo Individual</th>
+                            <th>Póliza</th>
+                            <th>Tipo Colectivo</th>
                             <th>Tomador</th>
                             <th>Aseguradora</th>
                             <th>Fecha desde</th>
@@ -127,28 +127,28 @@
 <!-- Page-Level Scripts -->
 <script>
 var lista = <%- JSON.stringify(data) %>;
-var tablaPoliza = null;
+var tablaColectivo = null;
 $(document).ready(function(){
-    tablaPoliza = $('#tablaPolizas').DataTable({
+    tablaColectivo = $('#tablaColectivos').DataTable({
         pageLength: 25,
         responsive: true,
         dom: '<"html5buttons"B>lTfgitp',
         processing: true,
         serverSide: false,
         columns: [
-            {"data": "numero_poliza"},
-            {"data": "tipo_individual_poliza"},
-            {"data": "nombre_tomador_poliza"},
+            {"data": "numero_colectivo"},
+            {"data": "tipo_colectivo"},
+            {"data": "nombre_tomador_colectivo"},
             {"data": "nombre_aseguradora"},
-            {"data": "fecha_desde_poliza"},
-            {"data": "fecha_hasta_poliza"},
-            {"data": "tipo_moneda_poliza"},
-            {"data": "prima_anual_poliza"},
-            {"data": "estatus_poliza"},
+            {"data": "fecha_desde_colectivo"},
+            {"data": "fecha_hasta_colectivo"},
+            {"data": "tipo_moneda_colectivo"},
+            {"data": "prima_anual_colectivo"},
+            {"data": "estatus_colectivo"},
             {
                 "data": "",
                 "render": (data, type, row) => {
-                        return `<form class="form-inline" method="get" action="/sistema/edit-policy/${row.id_poliza}">
+                        return `<form class="form-inline" method="get" action="/sistema/edit-collective/${row.id_colectivo}">
                                     <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
                                 </form>`;
                 }
@@ -156,7 +156,7 @@ $(document).ready(function(){
             {
                 "data": "",
                 "render": (data, type, row) => {
-                        return `<form class="form-inline" method="post" action="/sistema/remove-policy/${row.id_poliza}">
+                        return `<form class="form-inline" method="post" action="/sistema/remove-collective/${row.id_colectivo}">
                                     <div class="row">
                                         <div class="col-sm-6 col-lg-12" style="padding-bottom: 10px;">
                                             <button 
@@ -168,8 +168,8 @@ $(document).ready(function(){
                                         </div> 
                                         <div class="col-sm-6 col-lg-12">
                                             <textarea 
-                                                name="obser_deshabilitar_poliza"
-                                                id="obser_deshabilitar_poliza" 
+                                                name="obser_deshabilitar_colectivo"
+                                                id="obser_deshabilitar_colectivo" 
                                                 placeholder="Observaciones de Deshabilitar *" 
                                                 class="form-control"
                                             ></textarea>
@@ -192,8 +192,8 @@ $(document).ready(function(){
             }
         ]
     });
-    tablaPoliza.rows.add(lista);
-    tablaPoliza.draw();
+    tablaColectivo.rows.add(lista);
+    tablaColectivo.draw();
 });
 </script>
 
